# portfolio

./: Dockerfile  README.md  copy-robots.js  cv.json  docker-compose.yml  package.json  pnpm-lock.yaml  portfolio.service
.github/workflows/: deployment.yml
server/: Cargo.toml
server/src/: cache.rs  cache_init.rs  compression.rs  main.rs  startup_log.rs
src/components/: AboutMe.astro  Experience.astro  Footer.astro  Header.astro  Hero.astro  Projects.astro
src/components/icons/: Fastify.astro  Rust.astro  Solid.astro  TypeScript.astro
src/pages/: components.astro  index.astro
