[package]
name = "portfolio"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.8"
once_cell = "1"
mimalloc = "0.1"
mime_guess = "2"
ntex = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
brotli = { version = "6", features = ["simd"] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
