[package]
name = "portfolio"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.8"
mimalloc = "0.1"
mime_guess = "2"
ntex = { version = "2", features = ["compio"] }
brotli = { version = "7", features = ["simd"] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
