[package]
name = "portfolio"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1"
mime_guess = "2"
ntex = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
ahash = { version = "0.8", features = ["compile-time-rng"] }
async-compression = { version = "0.4", features = ["brotli", "tokio"] }
mimalloc = { version = "0.1", features = [
    "extended",
    "local_dynamic_tls",
    "override",
] }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
